test/classes/bradc/newKeyword/typeInsteadOfNew.good
typeInsteadOfNew.chpl:10: error: unresolved type specifier 'C(domain(1,int(64),false))'
typeInsteadOfNew.chpl:5: note: this candidate did not match: C
typeInsteadOfNew.chpl:10: note: because call includes 1 arguments
typeInsteadOfNew.chpl:5: note: but function can only accept 0 arguments
typeInsteadOfNew.chpl:10: note: did you forget the 'new' keyword?
